# sdk-python

./: AGENTS.md  README.md  SKILL.md  pyproject.toml
.github/workflows/: release.yml
examples/: basic.py  rag_pdf_index.py
src/markpdf/: __init__.py  _base.py  async_client.py  client.py  errors.py  models.py
