[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "markpdf-py"
version = "0.1.0"
description = "Official Python SDK for the markpdf (Flash PDF to Markdown) API"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "markpdf" }]
keywords = ["pdf", "markdown", "ocr", "document-conversion", "rag"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.urls]
Homepage = "https://markpdf.tech"
Documentation = "https://docs.markpdf.tech"
Repository = "https://github.com/Markpdf/sdk-python"

[tool.hatch.build.targets.wheel]
packages = ["src/markpdf"]
